# risk-compose

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  INSTALL_FROM_GITHUB.md  LICENSE  MANUAL.md  QUICKSTART.md  README.md  RELEASE_NOTES_TEMPLATE.md  pyproject.toml  pyrightconfig.json
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_compatibility.py  test_core_scoring.py  test_gui.py  test_gui_runner.py  test_packaging_boundaries.py  test_pipeline.py  test_registry.py  test_source_prep.py  test_source_prep_and_cli.py  test_tui.py  test_tui_state.py  test_types.py  test_validation.py
